# Bifold

./: Bifold  Makefile  Makefile.am  Makefile.in  PF_on.out  README.h  README.md  config.status  configure  configure.ac  head.h  main.c  output.out  stat.h  utils.h
.deps/: decompose.Po
Bifold.dSYM/Contents/: Info.plist
Bifold.dSYM/Contents/Resources/DWARF/: Bifold
Input/rand_structure/: rand_struc1.in  rand_struc10.in  rand_struc100.in  rand_struc11.in  rand_struc12.in  rand_struc13.in  rand_struc14.in  rand_struc15.in  rand_struc16.in  rand_struc17.in  rand_struc18.in  rand_struc19.in  rand_struc2.in  rand_struc20.in  rand_struc21.in  rand_struc22.in  rand_struc23.in  rand_struc24.in  rand_struc25.in  rand_struc26.in  rand_struc27.in  rand_struc28.in  rand_struc29.in  rand_struc3.in  rand_struc30.in  rand_struc31.in  rand_struc32.in  rand_struc33.in  rand_struc34.in  rand_struc35.in  rand_struc36.in  rand_struc37.in  rand_struc38.in  rand_struc39.in  rand_struc4.in  rand_struc40.in  rand_struc41.in  rand_struc42.in  rand_struc43.in  rand_struc44.in  (+60 more)
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
src/: Bifold  Makefile  Makefile.am  Makefile.in  decompose.c  decompose.h  main.c  pfunc.c  pfunc.h  stat.c  utils.c
src/.deps/: main.Po  stat.Po
